@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2019-2021 Mauro Trevisan
+ * Copyright (c) 2019-2022 Mauro Trevisan
  *
  * Permission is hereby granted, free of charge, to any person
  * obtaining a copy of this software and associated documentation
@@ -24,19 +24,19 @@
  */
 package io.github.mtrevisan.hunlinter.parsers.affix;
 
-import io.github.mtrevisan.hunlinter.services.Packager;
-import org.apache.commons.lang3.ArrayUtils;
-import org.apache.commons.lang3.StringUtils;
 import io.github.mtrevisan.hunlinter.parsers.affix.strategies.FlagParsingStrategy;
 import io.github.mtrevisan.hunlinter.parsers.affix.strategies.ParsingStrategyFactory;
 import io.github.mtrevisan.hunlinter.parsers.enums.AffixOption;
 import io.github.mtrevisan.hunlinter.parsers.vos.AffixEntry;
 import io.github.mtrevisan.hunlinter.parsers.vos.RuleEntry;
+import io.github.mtrevisan.hunlinter.services.Packager;
+import io.github.mtrevisan.hunlinter.services.system.JavaHelper;
 import io.github.mtrevisan.hunlinter.services.system.Memoizer;
 import io.github.mtrevisan.hunlinter.workers.exceptions.LinterException;
+import org.apache.commons.lang3.ArrayUtils;
+import org.apache.commons.lang3.StringUtils;
 
 import java.nio.charset.Charset;
-import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -50,63 +50,70 @@ import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import static io.github.mtrevisan.hunlinter.services.system.LoopHelper.applyIf;
-import static io.github.mtrevisan.hunlinter.services.system.LoopHelper.forEach;
-import static io.github.mtrevisan.hunlinter.services.system.LoopHelper.match;
-
 
 public class AffixData{
 
 	private static final String REPEATED_FLAG = "Same flags present in multiple options";
 	private static final String CONTAINER_CLOSED = "Cannot add data, container is closed";
-	private static final MessageFormat DUPLICATED_FLAG = new MessageFormat("Flag already present: `{0}`");
-	private static final MessageFormat TOO_MANY_APPLICABLE_RULES = new MessageFormat("Cannot {0}-convert word `{1}`, too many applicable rules");
+	private static final String DUPLICATED_FLAG = "Flag already present: `{}`";
 
 
 	private static final Function<String, FlagParsingStrategy> FLAG_PARSING_STRATEGY
 		= Memoizer.memoize(ParsingStrategyFactory::createFromFlag);
 
-	private static final List<AffixOption> SINGLE_FLAG_TAGS = Arrays.asList(AffixOption.NO_SUGGEST_FLAG, AffixOption.COMPOUND_FLAG,
-		AffixOption.COMPOUND_BEGIN_FLAG, AffixOption.COMPOUND_MIDDLE_FLAG, AffixOption.COMPOUND_END_FLAG,
-		AffixOption.ONLY_IN_COMPOUND_FLAG, AffixOption.PERMIT_COMPOUND_FLAG, AffixOption.FORBID_COMPOUND_FLAG,
-		/*AffixOption.COMPOUND_ROOT,*/ AffixOption.FORCE_COMPOUND_UPPERCASE_FLAG, AffixOption.CIRCUMFIX_FLAG, AffixOption.FORBIDDEN_WORD_FLAG,
-		AffixOption.KEEP_CASE_FLAG, AffixOption.NEED_AFFIX_FLAG/*, AffixOption.SUB_STANDARD_FLAG*/);
+	/*AffixOption.SUB_STANDARD_FLAG*/
+	private static final List<AffixOption> SINGLE_FLAG_TAGS = List.of(AffixOption.NO_SUGGEST_FLAG, AffixOption.COMPOUND_FLAG,
+		AffixOption.COMPOUND_BEGIN_FLAG, AffixOption.COMPOUND_MIDDLE_FLAG, AffixOption.COMPOUND_END_FLAG, AffixOption.ONLY_IN_COMPOUND_FLAG,
+		AffixOption.PERMIT_COMPOUND_FLAG, AffixOption.FORBID_COMPOUND_FLAG, /*AffixOption.COMPOUND_ROOT,*/
+		AffixOption.FORCE_COMPOUND_UPPERCASE_FLAG, AffixOption.CIRCUMFIX_FLAG, AffixOption.FORBIDDEN_WORD_FLAG, AffixOption.KEEP_CASE_FLAG,
+		AffixOption.NEED_AFFIX_FLAG);
 
 
-	private final Map<String, Object> data = new HashMap<>();
-	private final Collection<String> terminalAffixes = new HashSet<>();
-	private final Set<String> productableFlags = new HashSet<>();
+	private final Map<String, Object> data = new HashMap<>(0);
+	private final Collection<String> terminalAffixes = new HashSet<>(0);
+	private final Set<String> productableFlags = new HashSet<>(0);
+	private final Set<String> unproductableFlags = new HashSet<>(13);
 	private boolean closed;
 
 
-	void close(){
+	final void close(){
 		terminalAffixes.addAll(getStringData(SINGLE_FLAG_TAGS));
 
+		//FIXME store this information (unproductable, options, etc) in the enum itself
+		final List<AffixOption> unproductableAffixOptions = Arrays.asList(
+			AffixOption.NO_SUGGEST_FLAG, AffixOption.COMPOUND_FLAG, AffixOption.COMPOUND_BEGIN_FLAG, AffixOption.COMPOUND_MIDDLE_FLAG,
+			AffixOption.COMPOUND_END_FLAG, AffixOption.ONLY_IN_COMPOUND_FLAG, AffixOption.PERMIT_COMPOUND_FLAG,
+			AffixOption.FORBID_COMPOUND_FLAG, AffixOption.FORCE_COMPOUND_UPPERCASE_FLAG, AffixOption.CIRCUMFIX_FLAG,
+			AffixOption.FORBIDDEN_WORD_FLAG, AffixOption.KEEP_CASE_FLAG, AffixOption.NEED_AFFIX_FLAG);
+
 		productableFlags.addAll(data.keySet());
-		Arrays.asList(AffixOption.CHARACTER_SET.getCode(), AffixOption.FLAG.getCode(),
-			AffixOption.COMPLEX_PREFIXES.getCode(), AffixOption.LANGUAGE.getCode(), AffixOption.ALIASES_FLAG.getCode(),
-			AffixOption.ALIASES_MORPHOLOGICAL_FIELD.getCode(), AffixOption.TRY.getCode(), AffixOption.NO_SUGGEST_FLAG.getCode(),
-			AffixOption.REPLACEMENT_TABLE.getCode(), AffixOption.RELATION_TABLE.getCode(), AffixOption.WORD_BREAK_CHARACTERS.getCode(),
-			AffixOption.COMPOUND_RULE.getCode(), AffixOption.COMPOUND_MINIMUM_LENGTH.getCode(),
-			AffixOption.ALLOW_TWOFOLD_AFFIXES_IN_COMPOUND.getCode(), AffixOption.COMPOUND_MAX_WORD_COUNT.getCode(),
-			AffixOption.FORBID_DUPLICATES_IN_COMPOUND.getCode(), AffixOption.CHECK_COMPOUND_REPLACEMENT.getCode(),
-			AffixOption.FORBID_DIFFERENT_CASES_IN_COMPOUND.getCode(), AffixOption.FORBID_TRIPLES_IN_COMPOUND.getCode(),
-			AffixOption.SIMPLIFIED_TRIPLES_IN_COMPOUND.getCode(), AffixOption.FORCE_COMPOUND_UPPERCASE_FLAG.getCode(),
-			AffixOption.FULLSTRIP.getCode(), AffixOption.KEEP_CASE_FLAG.getCode(), AffixOption.NEED_AFFIX_FLAG.getCode(),
-			AffixOption.INPUT_CONVERSION_TABLE.getCode(), AffixOption.OUTPUT_CONVERSION_TABLE.getCode()
-		).forEach(productableFlags::remove);
+		Arrays.asList(
+			//options flags:
+			AffixOption.CHARACTER_SET, AffixOption.FLAG, AffixOption.COMPLEX_PREFIXES, AffixOption.LANGUAGE, AffixOption.ALIASES_FLAG,
+			AffixOption.ALIASES_MORPHOLOGICAL_FIELD, AffixOption.TRY, AffixOption.REPLACEMENT_TABLE, AffixOption.RELATION_TABLE,
+			AffixOption.WORD_BREAK_CHARACTERS, AffixOption.COMPOUND_RULE, AffixOption.COMPOUND_MINIMUM_LENGTH,
+			AffixOption.ALLOW_TWOFOLD_AFFIXES_IN_COMPOUND, AffixOption.COMPOUND_MAX_WORD_COUNT, AffixOption.FORBID_DUPLICATES_IN_COMPOUND,
+			AffixOption.CHECK_COMPOUND_REPLACEMENT, AffixOption.FORBID_DIFFERENT_CASES_IN_COMPOUND, AffixOption.FORBID_TRIPLES_IN_COMPOUND,
+			AffixOption.SIMPLIFIED_TRIPLES_IN_COMPOUND, AffixOption.FULLSTRIP, AffixOption.INPUT_CONVERSION_TABLE,
+			AffixOption.OUTPUT_CONVERSION_TABLE
+		).forEach(option -> productableFlags.remove(option.getCode()));
+		unproductableAffixOptions.forEach(option -> productableFlags.remove(option.getCode()));
+
+		unproductableAffixOptions.forEach(option -> JavaHelper.addIfNotNull(unproductableFlags, (String)data.get(option.getCode())));
 
 		closed = true;
 	}
 
-	void clear(){
+	final void clear(){
 		data.clear();
 		terminalAffixes.clear();
+		productableFlags.clear();
+		unproductableFlags.clear();
 		closed = false;
 	}
 
-	/** Check that the same flag doesn't belongs to different tags */
-	void verify(){
+	/** Check that the same flag doesn't belong to different tags. */
+	final void verify(){
 		final Map<AffixOption, Object> extractSingleFlags = extractSingleFlags();
 		final Collection<Object> flaggedData = extractSingleFlags.values();
 		final Collection<Object> uniqueValues = new HashSet<>(flaggedData);
@@ -116,7 +123,8 @@ public class AffixData{
 
 	private Map<AffixOption, Object> extractSingleFlags(){
 		final Map<AffixOption, Object> singleFlags = new EnumMap<>(AffixOption.class);
-		for(final AffixOption option : SINGLE_FLAG_TAGS){
+		for(int i = 0; i < SINGLE_FLAG_TAGS.size(); i ++){
+			final AffixOption option = SINGLE_FLAG_TAGS.get(i);
 			final Object entry = getData(option);
 			if(entry != null)
 				singleFlags.put(option, entry);
@@ -124,7 +132,7 @@ public class AffixData{
 		return singleFlags;
 	}
 
-	boolean containsData(final AffixOption key){
+	final boolean containsData(final AffixOption key){
 		return containsData(key.getCode());
 	}
 
@@ -132,85 +140,98 @@ public class AffixData{
 		return data.containsKey(key);
 	}
 
-	public <T> T getData(final AffixOption key){
+	public final <T> T getData(final AffixOption key){
 		return getData(key.getCode());
 	}
 
-	public <T> T getDataOrDefault(final AffixOption key, final T defaultValue){
+	public final <T> T getDataOrDefault(final AffixOption key, final T defaultValue){
 		return getDataOrDefault(key.getCode(), defaultValue);
 	}
 
 	@SuppressWarnings("unchecked")
-	public <T> T getData(final String key){
+	public final <T> T getData(final String key){
 		return (T)data.get(key);
 	}
 
 	@SuppressWarnings("unchecked")
-	public <T> T getDataOrDefault(final String key, final T defaultValue){
+	public final <T> T getDataOrDefault(final String key, final T defaultValue){
 		return (T)data.getOrDefault(key, defaultValue);
 	}
 
-	private List<String> getStringData(final Collection<AffixOption> keys){
+	private List<String> getStringData(final List<AffixOption> keys){
 		final List<String> strings = new ArrayList<>(keys.size());
-		forEach(keys, key -> strings.add(getData(key)));
+		for(int i = 0; i < keys.size(); i ++)
+			strings.add(getData(keys.get(i)));
 		return strings;
 	}
 
-	public <T> void addData(final AffixOption key, final T value){
+	public final <T> void addData(final AffixOption key, final T value){
 		addData(key.getCode(), value);
 	}
 
-	public <T> void addData(final String key, final T value){
+	public final <T> void addData(final String key, final T value){
 		if(closed)
 			throw new LinterException(CONTAINER_CLOSED);
 		if(data.containsKey(key))
-			throw new LinterException(DUPLICATED_FLAG.format(new Object[]{key}));
+			throw new LinterException(DUPLICATED_FLAG, key);
 
 		if(value != null)
 			data.put(key, value);
 	}
 
 
-	public String getLanguage(){
+	public final String getLanguage(){
 		return getData(AffixOption.LANGUAGE);
 	}
 
-	public void setLanguage(final String language){
+	public final void setLanguage(final String language){
 		data.put(AffixOption.LANGUAGE.getCode(), language);
 	}
 
-	public FlagParsingStrategy getFlagParsingStrategy(){
+	public final FlagParsingStrategy getFlagParsingStrategy(){
 		final String flag = getFlag();
 		return (flag != null? FLAG_PARSING_STRATEGY.apply(flag): ParsingStrategyFactory.createASCIIParsingStrategy());
 	}
 
-	public String getNeedAffixFlag(){
+	public final String getNeedAffixFlag(){
 		return getData(AffixOption.NEED_AFFIX_FLAG);
 	}
 
-	public boolean isTerminalAffix(final String flag){
+	public final boolean isTerminalAffix(final String flag){
 		return terminalAffixes.contains(flag);
 	}
 
-	public Set<String> getCompoundRules(){
+	public final Set<String> getCompoundRules(){
 		return getDataOrDefault(AffixOption.COMPOUND_RULE, Collections.emptySet());
 	}
 
-	public boolean isManagedByCompoundRule(final String flag){
-		return (match(getCompoundRules(), rule -> isManagedByCompoundRule(rule, flag)) != null);
+	public final Set<String> getCompoundRulesFlags(){
+		final FlagParsingStrategy strategy = getFlagParsingStrategy();
+		final Set<String> compoundRules = getCompoundRules();
+		final Set<String> compoundRulesFlags = new HashSet<>(compoundRules.size() * 2);
+		for(final String rule : getCompoundRules())
+			compoundRulesFlags.addAll(List.of(strategy.extractCompoundRule(rule)));
+		return compoundRulesFlags;
 	}
 
-	public boolean isManagedByCompoundRule(final String compoundRule, final String flag){
+	public final boolean isManagedByCompoundRule(final String flag){
+		for(final String rule : getCompoundRules())
+			if(isManagedByCompoundRule(rule, flag))
+				return true;
+		return false;
+	}
+
+	public final boolean isManagedByCompoundRule(final String compoundRule, final String flag){
 		final FlagParsingStrategy strategy = getFlagParsingStrategy();
 		final String[] flags = strategy.extractCompoundRule(compoundRule);
 		return ArrayUtils.contains(flags, flag);
 	}
 
-	public Charset getCharset(){
+	public final Charset getCharset(){
 		return Charset.forName(getData(AffixOption.CHARACTER_SET));
 	}
 
-	public boolean isFullstrip(){
+	public final boolean isFullstrip(){
 		return containsData(AffixOption.FULLSTRIP);
 	}
 
@@ -219,27 +240,27 @@ public class AffixData{
 	 *
 	 * @return Whether the prefix is complex
 	 */
-	public boolean isComplexPrefixes(){
+	public final boolean isComplexPrefixes(){
 		return containsData(AffixOption.COMPLEX_PREFIXES);
 	}
 
-	public boolean isForbidDifferentCasesInCompound(){
+	public final boolean isForbidDifferentCasesInCompound(){
 		return containsData(AffixOption.FORBID_DIFFERENT_CASES_IN_COMPOUND);
 	}
 
-	public boolean isForbidTriplesInCompound(){
+	public final boolean isForbidTriplesInCompound(){
 		return containsData(AffixOption.FORBID_TRIPLES_IN_COMPOUND);
 	}
 
-	public boolean isSimplifyTriplesInCompound(){
+	public final boolean isSimplifyTriplesInCompound(){
 		return containsData(AffixOption.SIMPLIFIED_TRIPLES_IN_COMPOUND);
 	}
 
-	public String getFlag(){
+	public final String getFlag(){
 		return getData(AffixOption.FLAG);
 	}
 
-	public boolean isAffixProductive(final String affix, final String word){
+	public final boolean isAffixProductive(final String affix, final String word){
 		final String convertedWord = applyInputConversionTable(word);
 
 		final boolean productive;
@@ -251,58 +272,50 @@ public class AffixData{
 		return productive;
 	}
 
-	public static AffixEntry[] extractListOfApplicableAffixes(final String word, final AffixEntry[] entries){
+	public static AffixEntry[] extractListOfApplicableAffixes(final String word, final List<AffixEntry> entries){
 		int limit = 0;
-		final int size = (entries != null? entries.length: 0);
+		final int size = (entries != null? entries.size(): 0);
 		final AffixEntry[] list = new AffixEntry[size];
 		for(int i = 0; i < size; i ++){
-			final AffixEntry entry = entries[i];
+			final AffixEntry entry = entries.get(i);
 			if(entry.canApplyTo(word))
 				list[limit ++] = entry;
 		}
 		return Arrays.copyOf(list, limit);
 	}
 
-	public String getReplacementPairs(){
+	public final String getReplacementPairs(){
 		return ((ConversionTable)getData(AffixOption.REPLACEMENT_TABLE))
 			.extractAsList();
 	}
 
-	public String getEquivalentChars(){
+	public final String getEquivalentChars(){
 		return ((RelationTable)getData(AffixOption.RELATION_TABLE))
 			.extractAsList();
 	}
 
-	public String getInputConversions(){
+	public final String getInputConversions(){
 		return ((ConversionTable)getData(AffixOption.INPUT_CONVERSION_TABLE))
 			.extractAsList();
 	}
 
-	public List<String> applyReplacementTable(final String word){
+	public final String applyReplacementTable(final String word){
 		final ConversionTable table = getData(AffixOption.REPLACEMENT_TABLE);
-		return (table != null? table.applyConversionTable(word): Collections.emptyList());
+		return (table != null? table.applyConversionTable(word): word);
 	}
 
-	public String applyInputConversionTable(final String word){
+	public final String applyInputConversionTable(final String word){
 		final ConversionTable table = getData(AffixOption.INPUT_CONVERSION_TABLE);
-		return applyConversionTable(word, table, "input");
+		return applyConversionTable(word, table);
 	}
 
-	public String applyOutputConversionTable(final String word){
+	public final String applyOutputConversionTable(final String word){
 		final ConversionTable table = getData(AffixOption.OUTPUT_CONVERSION_TABLE);
-		return applyConversionTable(word, table, "output");
+		return applyConversionTable(word, table);
 	}
 
-	private String applyConversionTable(String word, final ConversionTable table, final String type){
-		if(table != null){
-			try{
-				word = table.applySingleConversionTable(word);
-			}
-			catch(final LinterException e){
-				throw new LinterException(TOO_MANY_APPLICABLE_RULES.format(new Object[]{type, word}));
-			}
-		}
-		return word;
+	private static String applyConversionTable(final String word, final ConversionTable table){
+		return (table != null? table.applyConversionTable(word): word);
 	}
 
 	/**
@@ -312,14 +325,14 @@ public class AffixData{
 	 *
 	 * @see Packager#getSampleText()
 	 */
-	public String getSampleText(){
+	public final String getSampleText(){
 		final List<String> sortedSample;
 		final String sample = getData(AffixOption.TRY);
 		if(sample != null)
 			sortedSample = Arrays.asList(StringUtils.split(sample, StringUtils.EMPTY));
 		else
 			sortedSample = getRuleEntries().parallelStream()
-				.flatMap(entry -> Arrays.stream(entry.getEntries()))
+				.flatMap(entry -> entry.getEntries().stream())
 				.flatMap(entry -> Arrays.stream(StringUtils.split(entry.getAppending(), StringUtils.EMPTY)))
 				.distinct()
 				.collect(Collectors.toList());
@@ -328,76 +341,79 @@ public class AffixData{
 		return StringUtils.join(sortedSample, StringUtils.SPACE);
 	}
 
-	public String getCompoundBeginFlag(){
+	public final String getCompoundBeginFlag(){
 		return getData(AffixOption.COMPOUND_BEGIN_FLAG);
 	}
 
-	public String getCompoundMiddleFlag(){
+	public final String getCompoundMiddleFlag(){
 		return getData(AffixOption.COMPOUND_MIDDLE_FLAG);
 	}
 
-	public String getCompoundEndFlag(){
+	public final String getCompoundEndFlag(){
 		return getData(AffixOption.COMPOUND_END_FLAG);
 	}
 
-	public String getOnlyInCompoundFlag(){
+	public final String getOnlyInCompoundFlag(){
 		return getData(AffixOption.ONLY_IN_COMPOUND_FLAG);
 	}
 
-	public boolean allowTwofoldAffixesInCompound(){
+	public final boolean isTwofoldAffixesInCompound(){
 		return containsData(AffixOption.ALLOW_TWOFOLD_AFFIXES_IN_COMPOUND);
 	}
 
-	public String getPermitCompoundFlag(){
+	public final String getPermitCompoundFlag(){
 		return getData(AffixOption.PERMIT_COMPOUND_FLAG);
 	}
 
-	public String getForbidCompoundFlag(){
+	public final String getForbidCompoundFlag(){
 		return getData(AffixOption.FORBID_COMPOUND_FLAG);
 	}
 
-	public int getCompoundMaxWordCount(){
+	public final Integer getCompoundMaxWordCount(){
 		return getData(AffixOption.COMPOUND_MAX_WORD_COUNT);
 	}
 
-	public boolean isForbidDuplicatesInCompound(){
+	public final boolean isForbidDuplicatesInCompound(){
 		return containsData(AffixOption.FORBID_DUPLICATES_IN_COMPOUND);
 	}
 
-	public boolean isCheckCompoundReplacement(){
+	public final boolean isCheckCompoundReplacement(){
 		return containsData(AffixOption.CHECK_COMPOUND_REPLACEMENT);
 	}
 
-	public int getCompoundMinimumLength(){
+	public final Integer getCompoundMinimumLength(){
 		return getData(AffixOption.COMPOUND_MINIMUM_LENGTH);
 	}
 
-	public String getCompoundFlag(){
+	public final String getCompoundFlag(){
 		return getData(AffixOption.COMPOUND_FLAG);
 	}
 
-	public String getCircumfixFlag(){
+	public final String getCircumfixFlag(){
 		return getData(AffixOption.CIRCUMFIX_FLAG);
 	}
 
-	public String getForbiddenWordFlag(){
+	public final String getForbiddenWordFlag(){
 		return getData(AffixOption.FORBIDDEN_WORD_FLAG);
 	}
 
-	public String getForceCompoundUppercaseFlag(){
+	public final String getForceCompoundUppercaseFlag(){
 		return getData(AffixOption.FORCE_COMPOUND_UPPERCASE_FLAG);
 	}
 
-	public Set<String> getProductableFlag(){
+	public final Set<String> getProductableFlags(){
 		return productableFlags;
 	}
 
-	public List<RuleEntry> getRuleEntries(){
-		final ArrayList<RuleEntry> list = new ArrayList<>(data.size());
-		applyIf(data.values(),
-			entry -> RuleEntry.class.isAssignableFrom(entry.getClass()),
-			entry -> list.add((RuleEntry)entry));
-		list.trimToSize();
+	public final Set<String> getUnproductableFlags(){
+		return unproductableFlags;
+	}
+
+	public final List<RuleEntry> getRuleEntries(){
+		final List<RuleEntry> list = new ArrayList<>(data.size());
+		for(final Object entry : data.values())
+			if(RuleEntry.class.isAssignableFrom(entry.getClass()))
+				list.add((RuleEntry)entry);
 		return list;
 	}
 
